--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Build, Test, and Lint Docker Image
 
 on:
   push:
-    paths:
-      - 'Dockerfile' # Trigger the workflow only if Dockerfile is modified
+#    paths:
+#      - 'Dockerfile' # Trigger the workflow only if Dockerfile is modified
     branches:
       - master # Trigger the workflow only if the push is made to the main branch
 
@@ -19,7 +19,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 -t your-docker-username/Assignment1:latest .
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t ajinkya924/assignment1:latest .
 
   test:
     needs: build # Only run the test job if the build job is successful
@@ -87,4 +87,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }} # Set the password as a secret in your repository
 
     - name: Push Docker image
-      run: docker push your-docker-username/Assignment1:latest
+      run: docker push ajinkya924/Assignment1:latest
