--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Test Docker image
       run: |
-        docker run -d -p 8081:8081 --name test1 your-docker-username/Assignment1:latest
+        docker run -d -p 8081:8081 --name test1 ajinkya924/Assignment1:latest
         sleep 10  # Wait for the application to start
         curl localhost:8081 || exit 1
 
@@ -67,7 +67,7 @@ jobs:
 
     - name: Run dive
       run: |
-        dive --ci --highestUserWastedPercent=10 your-docker-username/Assignment1:latest
+        dive --ci --highestUserWastedPercent=10 ajinkya924/Assignment1:latest
         
   push:
     needs: [build, test, lint] # Only run the push job if the build, test, and lint jobs are successful
