--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Build Docker image
+      run: docker buildx build --platform linux/amd64,linux/arm64 -t ajinkya924/assignment1:latest .
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
