--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
 
     - name: Build Docker image
       run: docker buildx build --platform linux/amd64,linux/arm64 -t ajinkya924/assignment1:latest .
@@ -60,16 +60,19 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 -t ajinkya924/assignment1:latest .
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }} # Set the username as a secret in your repository
         password: ${{ secrets.DOCKER_PASSWORD }} # Set the password as a secret in your repository
 
     - name: Push Docker image
       run: docker push ajinkya924/assignment1:latest
+    
+    - name: Build and Push
+      uses: docker/build-push-action@v5
+      with: 
+        push: true
+        tags: ajinkya924/assignment1:latest
